<resources>

    <string name="ico_network_connect_400">请求无效！</string>
    <string name="ico_network_connect_404">网络连接失败，请联系管理员！</string>
    <string name="ico_network_connect_405">用来访问本页面的 HTTP 谓词不被允许（方法不被允许）！</string>
    <string name="ico_network_request_timesout">网络请求超时！</string>
    <string name="ico_network_server_timesout">服务器连接超时，请稍候再试！</string>
    <string name="ico_network_parameter_analysis_error">参数解析错误，请检查网络状态！</string>
    <string name="ico_network_internal_server_error">服务器出错，请联系管理员!</string>
    <string name="ico_network_no">当前没有网络，请检查网络状态！</string>
    <string name="ico_network_connect_error">网络连接错误，请稍候再试！</string>
    <string name="ico_network_connect_unknown_error">连接出错，请稍候再试！</string>

    <string name="app_name">欣然商城</string>
    <string name="sy">首页</string>
    <string name="order">购物车</string>
    <string name="people">我的</string>
    <string name="my">我的账户</string>
    <string name="qd">签到</string>
    <string name="tsy">客官请搜索商品名</string>
    <string name="login">登录</string>
    <string name="username">账号：</string>
    <string name="password">密码：</string>
    <string name="people_register">用户注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="wdzc">我的资产</string>
    <string name="wdtc">我的提成</string>
    <string name="wdjf">我的积分</string>
    <string name="sqtx">申请提现</string>
    <string name="wddd">我的订单</string>
    <string name="dzf">待支付</string>
    <string name="dfh">待发货</string>
    <string name="dsh">待收货</string>
    <string name="dpj">待评价</string>
    <string name="tkth">退款/退货</string>
    <string name="wdpt">我的平台</string>
    <string name="wdyqm">我的邀请码</string>
    <string name="wdscj">我的收藏夹</string>
    <string name="cx">促销</string>
    <string name="mainpage_salename">红米2A高配版双卡双待</string>
    <string name="mainpage_timesale">限时打折</string>
    <string name="mainpage_send_with_sale">买就送</string>
    <string name="mainpage_send_way">买三赔一</string>
    <string name="mainpage_sale_title">大人请带我走吧！！！</string>
    <string name="bg_type_0">男女服装</string>
    <string name="bg_type_1">鞋包配饰</string>
    <string name="bg_type_2">美容美妆</string>
    <string name="bg_type_3">户外运动</string>
    <string name="bg_type_4">数码家电</string>
    <string name="bg_type_5">家居家装</string>
    <string name="bg_type_6">食品保健</string>
    <string name="bg_type_7">母婴用品</string>
    <string name="bg_type_8">文化娱乐</string>
    <string name="bg_type_9">话费网游</string>
    <string name="bg_type_10">票务旅游</string>
    <string name="hj">合计：  ￥</string>
    <string name="sc">删除</string>
    <string name="js">结算</string>
    <string name="qx">全选</string>
    <string name="gwc">购物车</string>
    <string name="ccnxhd">猜猜你喜欢的</string>
    <string name="nothing">空空的，什么都没有</string>
    <string name="tishi">请前去商城购买</string>
    <string name="wwllj">"请连接网络后再重试！"</string>
    <string name="yx">月销：</string>
    <string name="qqsb">请求失败，请稍后重试！</string>
    <string name="tx">头像</string>
    <string name="yhm">用户名</string>
    <string name="sex">性别</string>
    <string name="csrq">出生日期</string>
    <string name="email">邮箱</string>
    <string name="sjh">手机号</string>
    <string name="dzgl">地址管理</string>
    <string name="zhaq">账号安全</string>
    <string name="wdzh">我的账户</string>
    <string name="qsrsjh">请输入手机号</string>
    <string name="qsryzm">请输入验证码</string>
    <string name="djhqyzm">点击获取验证码</string>
    <string name="qsrmm">请输入密码</string>
    <string name="qqrmm">请确认密码</string>
    <string name="sryqmxt">请输入邀请码（选填）</string>
    <string name="sys">扫一扫</string>
    <string name="register">确认</string>
    <string name="yhzc">用户注册</string>
    <string name="wjmm">忘记密码</string>
    <string name="jr">今日</string>
    <string name="tt">头条</string>
    <string name="tkthck">退款退货查看</string>
    <string name="qrsh">确认收货</string>
    <string name="tk">退款</string>
    <string name="fk">付款</string>
    <string name="qxdd">取消订单</string>
    <string name="pj">评价</string>
    <string name="ckwl">查看物流</string>
    <string name="scdd">删除订单</string>
    <string name="jrtj">今日推荐</string>

    <string name="__picker_title">图片选择</string>
    <string name="__picker_delete">删除</string>
    <string name="__picker_done">完成</string>
    <string name="__picker_done_with_count">完成(%1$d/%2$d)</string>
    <string name="__picker_image_index">%1$d/%2$d</string>
    <string name="__picker_undo">撤消</string>
    <string name="__picker_deleted_a_photo">删除了一张图片</string>
    <string name="__picker_confirm_to_delete">确认删除？</string>
    <string name="__picker_yes">确定</string>
    <string name="__picker_cancel">取消</string>
    <string name="__picker_all_image">所有图片</string>
    <string name="__picker_over_max_count_tips">你最多可以选择%1$d张图片</string>
    <string name="__picker_image_count">%1$d张</string>

    <string name="__picker_preview">预览</string>

</resources>
