<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_myorder_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp"
        android:gravity="right"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fragment_myorder_item_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="共件1223商品，共"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/fragment_myorder_item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="￥ 123123"
            android:textColor="@color/main"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp"
        android:gravity="right"
        android:orientation="horizontal">

        <TextView
            android:tag="0"
            android:id="@+id/fragment_myorder_item_scdd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:background="@drawable/bg_black"
            android:ems="6"
            android:gravity="center"
            android:text="@string/scdd"
            android:visibility="gone" />

        <TextView
            android:tag="1"
            android:id="@+id/fragment_myorder_item_ckwl"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/bg_black"
            android:ems="6"
            android:gravity="center"
            android:text="@string/ckwl"
            android:visibility="gone" />

        <TextView
            android:tag="2"
            android:id="@+id/fragment_myorder_item_pj"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/bg_orange"
            android:ems="6"
            android:gravity="center"
            android:text="@string/pj"
            android:visibility="gone" />

        <TextView
            android:tag="3"
            android:id="@+id/fragment_myorder_item_qxdd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/bg_black"
            android:ems="6"
            android:gravity="center"
            android:text="@string/qxdd"
            android:visibility="gone" />

        <TextView
            android:tag="4"
            android:id="@+id/fragment_myorder_item_fk"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/bg_orange"
            android:ems="6"
            android:gravity="center"
            android:text="@string/fk"
            android:visibility="gone" />

        <TextView
            android:tag="5"
            android:id="@+id/fragment_myorder_item_tk"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/bg_black"
            android:ems="6"
            android:gravity="center"
            android:text="@string/tk"
            android:visibility="gone" />

        <TextView
            android:tag="6"
            android:id="@+id/fragment_myorder_item_tkth"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/bg_black"
            android:ems="6"
            android:gravity="center"
            android:text="@string/tkth"
            android:visibility="gone" />

        <TextView
            android:tag="7"
            android:id="@+id/fragment_myorder_item_qrsh"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/bg_orange"
            android:ems="6"
            android:gravity="center"
            android:text="@string/qrsh"
            android:visibility="gone" />

        <TextView
            android:tag="8"
            android:id="@+id/fragment_myorder_item_tkthck"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/bg_black"
            android:ems="6"
            android:gravity="center"
            android:text="@string/tkthck"
            android:visibility="gone" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />

</LinearLayout>