<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.linxiangqu.shop.activity.ForgetPasswordActivity">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <EditText
            android:id="@+id/activity_forget_password_sjh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:ellipsize="end"
            android:hint="@string/qsrsjh"
            android:inputType="phone"
            android:singleLine="true" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <EditText
            android:id="@+id/activity_forget_password_yzm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:background="@color/white"
            android:ellipsize="end"
            android:hint="@string/qsryzm"
            android:singleLine="true" />

        <Button
            android:id="@+id/activity_forget_password_fsyzm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="0.6"
            android:background="@drawable/bg_black"
            android:gravity="center"
            android:text="@string/djhqyzm"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingLeft="10dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.4"
            android:background="@color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_weight="0.6"
            android:background="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <EditText
            android:id="@+id/activity_forget_password_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:ellipsize="end"
            android:hint="@string/qsrmm"
            android:singleLine="true" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <EditText
            android:id="@+id/activity_forget_password_qrpassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:ellipsize="end"
            android:hint="@string/qqrmm"
            android:singleLine="true" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/black" />

    <Button
        android:id="@+id/activity_forget_password_sure"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@mipmap/register_submit_background_sj"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>
