<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitesmoke"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.linxiangqu.shop.widget.MyScrollview
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/fragment_myshopcar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/fragment_myshopcar_nothing"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nothing"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/tishi"
                        android:textSize="15sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/fragment_myshopcar_tv"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="请连接网络后再重试！"
                    android:textSize="20sp"
                    android:visibility="gone" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/fragment_myshopcar_order"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fragment_myshopcar_order"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@mipmap/shoppingcart_split"
                        android:gravity="center"
                        android:text="@string/ccnxhd" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/fragment_myshopcar_your_like"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white" />

                </LinearLayout>

            </LinearLayout>

        </com.linxiangqu.shop.widget.MyScrollview>

        <LinearLayout
            android:id="@+id/fragment_myshopcar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="bottom"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:gravity="right"
                android:text="@string/hj"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/fragment_myshopcar_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="left"
                android:text="0.0"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/fragment_myshopcar_delete"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#F72145"
                android:ems="3"
                android:gravity="center"
                android:text="@string/sc"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/fragment_myshopcar_jiesuan"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#EE4E6A"
                android:ems="3"
                android:gravity="center"
                android:text="@string/js"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>