<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:background="@color/colorPrimary"
    android:gravity="bottom"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/toolbar_linear_one"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:visibility="visible">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical">

            <RelativeLayout
                android:id="@+id/toolbar_qd"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:visibility="gone">

                <ImageButton
                    android:id="@+id/toolbar_sign"
                    android:layout_width="18dp"
                    android:layout_height="22dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="1dp"
                    android:background="@mipmap/icon_sign" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/toolbar_sign"
                    android:layout_marginLeft="6dp"
                    android:text="@string/qd"
                    android:textColor="@color/white" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/toolbar_qx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <CheckBox
                    android:id="@+id/toolbar_qx_checkbox"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginBottom="4dp"
                    android:background="@drawable/selector_toolbar_check_ico"
                    android:button="@null" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qx"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/toolbar_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="3dp"
                android:background="@mipmap/backa_sj"
                android:visibility="visible" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/toolbar_ss"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="2dp"
                android:background="@mipmap/bg_search"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="4dp"
                    android:background="@mipmap/icon_search" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="3dp"
                    android:text="@string/tsy"
                    android:textSize="18sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/toolbar_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:visibility="visible" />

        </RelativeLayout>

        <TextView
            android:id="@+id/toolbar_bj"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:text="编辑"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:visibility="invisible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/toolbar_linear_two"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageButton
            android:id="@+id/toolbar_pl_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="3dp"
            android:background="@mipmap/backa_sj"
            android:visibility="visible" />

        <android.support.design.widget.TabLayout
            android:id="@+id/activity_myplatform_tablayout"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            tools:tabIndicatorColor="@color/white"
            tools:tabIndicatorHeight="5dp"
            tools:tabSelectedTextColor="@color/white"
            tools:tabTextColor="@color/whitesmoke" />

        <ImageButton
            android:id="@+id/toolbar_pl_ft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="6dp"
            android:background="@mipmap/icon_write"
            android:visibility="visible" />

    </LinearLayout>

</LinearLayout>